--- a/application/templates/review_form.html
+++ b/application/templates/review_form.html
@@ -42,9 +42,9 @@
             <div class="form-group floating-label-form-group controls mb-0 pb-2">
               <label>Review</label>
               {% if review %}
-                <textarea class="form-control" id="token" rows="3" name="review" type="password" placeholder="Description" required="required" data-validation-required-message="Please enter a review." required> {{ review }} </textarea>
+                <textarea class="form-control" id="token" rows="3" name="review" type="password" placeholder="Review" required="required" data-validation-required-message="Please enter a review." required> {{ review }} </textarea>
               {% else %}
-                <textarea class="form-control" id="token" rows="3" name="review" type="password" placeholder="Description" required="required" data-validation-required-message="Please enter a review." required></textarea>
+                <textarea class="form-control" id="token" rows="3" name="review" type="password" placeholder="Review" required="required" data-validation-required-message="Please enter a review." required></textarea>
               {% endif %}
               <p class="help-block text-danger"></p>
             </div>
