--- a/application/templates/review_form.html
+++ b/application/templates/review_form.html
@@ -98,7 +98,7 @@
               {% if pred_stars %}
               <button type="Submit" class="btn btn-primary btn-xl" id="sendMessageButton">Submit</button>
               {% else %}
-                <button type="check" class="btn btn-primary btn-xl" id="sendMessageButton">Get Stars</button>
+                <button type="check" class="btn btn-primary btn-xl" id="sendMessageButton">Predict</button>
               {% endif %}
             </div>    
         </form>
